--- a/src/components/ProductsSection/ProductSection.css
+++ b/src/components/ProductsSection/ProductSection.css
@@ -10,6 +10,19 @@
   border-radius: 12px;
 }
 
+.product_section_title {
+  font-size: 36px;
+  text-align: center;
+}
+
+.swiper.main_slider .swiper-pagination{
+  position: unset;
+}
+
+.swiper.main_slider .swiper-pagination-bullet-active {
+  background-color: var(--dark-moss-green);
+}
+
 .product_example_card {
   max-width: 600px;
   display: flex;
@@ -24,6 +37,41 @@
   max-width: 300px;
 }
 
+.product_example_info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 5%;
+}
+
+.product_example_title,
+.product_section_text {
+  color: var(--dark-moss-green);
+}
+
 .product_section_link {
-  margin-bottom: 0 auto;
+  margin-left: 5px;
+  text-decoration: none;
+  color: var(--dark-moss-green);
+  position: relative;
+}
+
+.product_section_link::after {
+  display: inline-block;
+  content: '';
+  width: 100%;
+  height: 1px;
+  position: absolute;
+  left: 0;
+  bottom: -4px;
+  transform: scale(0);
+  transform-origin: center;
+  background-color: var(--dark-moss-green);
+  opacity: 0;
+  transition: 0.3s;
+}
+
+.product_section_link:hover::after {
+  transform: scale(1);
+  opacity: 1;
 }
