--- a/src/components/ProductsSection/ProductSection.css
+++ b/src/components/ProductsSection/ProductSection.css
@@ -36,6 +36,16 @@
   justify-content: center;
   align-items: center;
   gap: 5%;
+  text-decoration: none;
+  color: black;
+  transform: scale(0.98);
+  border-radius: 12px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.product_example_card:hover {
+  transform: scale(1);
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
 }
 
 .product_example_image {
@@ -48,6 +58,8 @@
   flex-direction: column;
   justify-content: space-between;
   gap: 5%;
+  padding: 2%;
+  border-radius: 12px;
 }
 
 .product_example_title,
