--- a/src/components/ProductsSection/ProductSection.css
+++ b/src/components/ProductsSection/ProductSection.css
@@ -3,6 +3,15 @@
   background-color: var(--background-color);
 }
 
+.product_section_content_wrapper {
+  max-width: 1400px;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; */
+  margin: 0 auto;
+}
+
 .product_section_title {
   font-size: 36px;
   text-align: center;
