--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -146,7 +146,7 @@
 }
 
 .loggedin-container {
-  margin-left: 10px;
+  margin-left: 30px;
   display: flex;
   gap: 10px;
 }
@@ -222,5 +222,6 @@
   .loggedin-container {
     flex-direction: column;
     align-items: center;
+    margin-left: 0;
   }
 }
