feat: implement categoriers burger

--- a/src/components/Catalog/Breadcrumbs/Breadcrumbs.css
+++ b/src/components/Catalog/Breadcrumbs/Breadcrumbs.css
@@ -1,6 +1,6 @@
 .breadcrumb {
   list-style-type: none;
-  padding: 20px 0 0 30px;
+  padding: 20px 30px;
   margin: 0;
   background-color: var(--cambridge-blue);
   color: #fff;
