Feat/implement categories burger (#137)
* feat: implement categoriers burger

* feat: implement copy promo button

* feat: make copy button responsive

* feat: change copy button svg color

--- a/src/components/SpecialOffersSection/SpecialOffersSection.css
+++ b/src/components/SpecialOffersSection/SpecialOffersSection.css
@@ -38,8 +38,27 @@
   gap: 20px;
 }
 
+.code-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 2%;
+}
+
 .red {
   color:var(--error-message-color)
+}
+
+.copy-button {
+  width: 25px;
+  height: 25px;
+  background-color: inherit;
+  background-image: url('../../assets/icons/copy-svgrepo-com.svg');
+  background-size: contain;
+  background-position: center center;
+  background-repeat: no-repeat;
+  transition: 0.3s;
+  transform: scale(0.9);
 }
 
 @media (max-width: 800px) {
@@ -62,5 +81,12 @@
   }
   .special-offer_h2 {
     font-size: 24px;
+  }
+}
+
+@media (hover: hover) {
+  .copy-button:hover {
+    transform: scale(1.02);
+    background-color: inherit;
   }
 }
