--- a/src/components/Catalog/CategorySidebar/CategorySidebar.css
+++ b/src/components/Catalog/CategorySidebar/CategorySidebar.css
@@ -9,6 +9,7 @@
   top: 30px;
   bottom: 30px;
   max-height: calc(100vh - 140px);
+  overflow-y: auto;
 }
 
 .sidebar-title {
@@ -88,6 +89,7 @@
     margin: 0;
     padding: 0;
     border-radius: 0;
+    overflow-y: unset;
   }
 
   .burger-wrapper {
@@ -109,7 +111,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #6c876c;
+    background-color: rgba(88, 119, 82, 0.9);;
     opacity: 0;
     visibility: hidden;
     z-index: 2000;
