--- a/src/components/Catalog/CategorySidebar/CategorySidebar.css
+++ b/src/components/Catalog/CategorySidebar/CategorySidebar.css
@@ -9,7 +9,10 @@
   top: 30px;
   bottom: 30px;
   max-height: calc(100vh - 140px);
+  overflow-x: hidden;
   overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: var(--dark-moss-green) rgba(88, 119, 82, 0.5);
 }
 
 .sidebar-title {
@@ -59,21 +62,75 @@
   padding-left: 30px;
 }
 
+/* Burger */
+
+.sidebar-title-wrapper {
+  width: 100%;
+  padding-left: 30px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 20px;
+}
+
+.sidebar-title-wrapper * {
+  margin-bottom: 0;
+}
+
+.burger-wrapper {
+  opacity: 0;
+  visibility: hidden;
+}
+
 @media screen and (max-width: 758px) {
   .category-sidebar {
     position: relative;
     margin: 0;
     top: 0;
     text-align: center;
-    max-height: fit-content;
-    margin: 10px 0;
-    padding: 20px 0;
+    margin: 0;
+    padding: 0;
     border-radius: 0;
+    overflow: unset;
+  }
+
+  .burger-wrapper {
+    opacity: 1;
+    visibility: visible;
+    display: block;
+  }
+
+  .sidebar-title-wrapper {
+    margin-bottom: 0px;
+  }
+
+  .categories-container {
+    width: 245px;
+    position: absolute;
+    left: -100%;
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(88, 119, 82, 0.9);;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 2000;
+    padding: 10px;
+    border-bottom-right-radius: 12px;
+    transition: 0.3s all;
+  }
+
+  .categories-container.open {
+    left: 0;
+    opacity: 1;
+    visibility: visible;
   }
 
   .sidebar-title {
     margin-top: 0;
-    margin-bottom: 10px;
   }
 
   .category-item {
@@ -82,9 +139,13 @@
     width: 100%;
   }
 
+  .category-item.selected {
+    border-radius: 12px;
+  }
+
   .category-item:hover {
     font-weight: normal;
     transform: scale(1);
   }
-
 }
+
