--- a/src/components/Catalog/ProductCard/ProductCard.css
+++ b/src/components/Catalog/ProductCard/ProductCard.css
@@ -11,7 +11,7 @@
 }
 
 .card:hover {
-  transform: scale(1.05);
+  transform: scale(1.02);
   box-shadow: 0 15px 25px rgba(0, 0, 0, 0.3);
   background-color: #f5f5f5;
 }
@@ -84,6 +84,7 @@
   align-items: center;
   justify-content: space-between;
   margin-top: auto;
+  margin-bottom: 10px;
 }
 
 .price-old {
@@ -98,7 +99,33 @@
   font-weight: bold;
 }
 
+.price-norm {
+  font-size: 24px;
+  color: #000;
+}
+
 .price-old,
 .price-new {
+  cursor: default;
+}
+
+.add-to-cart-button {
+  padding: 10px 20px;
+  background-color: var(--dark-moss-green);
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.add-to-cart-button:disabled {
+  cursor: default;
+  background-color: var(--cambridge-blue);
+  opacity: 0.7;
+}
+
+.added-to-cart {
+  text-align: center;
   cursor: default;
 }
